<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_create_task"
        app:title="@string/create_task_title" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/loader"
        style="@style/LoaderTheme"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/material_default_activity_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_task_name"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_task_task_name_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tx_task_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_try_random"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="64dp"
            android:minHeight="36dp"
            android:text="@string/random_activity"
            android:textAppearance="?attr/textAppearanceButton"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintStart_toStartOf="@id/til_task_name"
            app:layout_constraintTop_toBottomOf="@id/til_task_name" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/lpi_try_random"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintBottom_toBottomOf="@id/btn_try_random"
            app:layout_constraintEnd_toEndOf="@id/btn_try_random"
            app:layout_constraintStart_toStartOf="@id/btn_try_random"
            app:layout_constraintTop_toBottomOf="@id/btn_try_random" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_est_pomodoros"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/create_task_estimated_pomodoros"
            app:layout_constraintBottom_toTopOf="@id/pcv_counter"
            app:layout_constraintEnd_toStartOf="@id/pcv_counter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pcv_counter" />

        <pe.devpicon.android.codelab.pomodoro.ui.PomodoroCounterView
            android:id="@+id/pcv_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_try_random" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
